src/test/ui/hr-subtype/hr-subtype.free_inv_x_vs_free_inv_y.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:33:26
   |
LL |               gimme::<$t2>(None::<$t1>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<fn(Inv<'y>)>`
              found type `std::option::Option<fn(Inv<'x>)>`
note: the lifetime 'x as defined on the function body at 32:20...
  --> $DIR/hr-subtype.rs:32:20
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                      ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
note: ...does not necessarily outlive the lifetime 'y as defined on the function body at 32:23
  --> $DIR/hr-subtype.rs:32:23
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                         ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<fn(Inv<'x>)>`
              found type `std::option::Option<fn(Inv<'y>)>`
note: the lifetime 'x as defined on the function body at 38:22...
  --> $DIR/hr-subtype.rs:38:22
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                        ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
note: ...does not necessarily outlive the lifetime 'y as defined on the function body at 38:25
  --> $DIR/hr-subtype.rs:38:25
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                           ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
